Tue May  4 20:20:40 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Regex.h, htfuzzy/Regex.cc: Add new regex fuzzy
	algorithm, based on Substring and Prefix.
	
	* htfuzzy/Fuzzy.cc (getFuzzyByName): Add it.

	* htfuzzy/Makefile.in: Compile it.

	* htcommon/defaults.cc: Add new attribute regex_max_words, same
	concept as substring_max_words.
	
	* htfuzzy/Exact.cc, htfuzzy/Substring.cc, htfuzzy/Prefix.cc:
	Define names attribute for debugging purposes.

	* installdir/htdig.conf: Fix the comments for search_algorithm to
	refer to all the current possibilities.

	* htlib/HtRegex.cc (match): Slight cleanup of how to return.
	
Tue May  4 15:28:38 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc (reportError): Add e-mail of maintainer to
	error message. Should help direct people to the correct place.

	* htdig/Retriever.cc (IsValidURL): Lowercase all extensions from
	bad_extensions as well as all extensions used in
	comparisons. Ensures we're using case-insenstive matching.

Mon May  3 23:20:22 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Retriever.cc (IsValidURL): Fix typo with #else statement
	for REGEX.

	* htdig/htdig.cc: Add conditionals for REGEX to use HtRegex
	instead of StringMatch methods when defined. 
	
	* htlib/HtDateTime.h: Update to remove definitions of true and
	false, established by May 2 change in
	include/htconfig.h.in as contributed by Gabriele.

	* htlib/HtDateTime.cc: Replace call to mktime internal function to
	Httimegm in timegm.c, contributed by Leo.

	* htlib/timegm.c: Declare my_mktime_gmtime_r to prevent compiler
	errors with incompatible gmtime structures, contributed by Leo.
	
	* configure.in: Rearrange date/time checks for clarity.

	* configure: Regenerate using autoconf.

	* include/htconfig.in: Add HAVE_STRFTIME flag.

Sun May  2 18:49:04 1999  Alexander Bergolth  <leo@leo.wu-wien.ac.at>

	* configure.in, include/htconfig.h.in: Added a configure test for